# practical-gcp-examples

./: .gitignore  README.md  vertex-ai-virtual-try-on_try_on_examples.ipynb
.superpowers/sdd/: task-1-report.md  task-2-report.md
a2a-with-gke-sandbox/: .gcloudignore  .gitignore  Dockerfile  README.md  agents-cli-manifest.yaml  pyproject.toml
a2a-with-gke-sandbox/app/: a2ui_support.py  agent.py  fast_api_app.py
a2a-with-gke-sandbox/deployment/: deploy-image.sh
a2a-with-gke-sandbox/deployment/bootstrap/router/: Dockerfile  pyproject.toml  sandbox_router.py
a2a-with-gke-sandbox/deployment/sandbox-runtime/: Dockerfile  README.md  pyproject.toml
a2a-with-gke-sandbox/skills/: README.md
a2a-with-gke-sandbox/tests/: README.md  conftest.py
adk-a2a-oauth/: GEMINI.md  Makefile  README.md  pyproject.toml
adk-a2a-oauth/app/: agent.py  fast_api_app.py
adk-a2a/a2a-weather-agent/: Makefile  README.md  pyproject.toml
adk-ae-oauth/: Makefile  README.md  deployment_metadata.json  pyproject.toml
adk-ae-oauth/app/: agent.py  auths.py  tools.py
adk-ae-oauth/tools/: register_oauth.py
adk-agent-billing/: GEMINI.md  Makefile  deployment_metadata.json  pyproject.toml  starter_pack_README.md  starter_pack_pyproject.toml
adk-agent-billing/.cloudbuild/: deploy-to-prod.yaml  pr_checks.yaml  staging.yaml
adk-agent-billing/analytics-agent/: agent.py  logging_utils.py
adk-agent-billing/analytics_agent/: agent.py  agent_engine_app.py  bigquery_client_decorator.py  genai_client_decorator.py  user.py
adk-agent-engine/ae-oauth-example/: GEMINI.md  Makefile  README.md  deployment_metadata.json  pyproject.toml
adk-agent-engine/oauth-app/: README.md  pyproject.toml  server.py
adk-agent-sandbox/: .gitignore  Dockerfile  README.md  TODO.md  agents-cli-manifest.yaml  pyproject.toml
adk-agent-sandbox/app/: agent.py  config.py  fast_api_app.py  render_callback.py
adk-agent-sandbox/bootstrap/: create_dataset.py  create_sandbox.py
adk-agy-agent/: .gitignore  README.md  agents-cli-manifest.yaml  deployment_metadata.json  pyproject.toml
adk-dataplex-dq-agent/: GEMINI.md  Makefile  README.md  pyproject.toml
adk_agents/: README.md  pyproject.toml
adk_agents_frontend/ecom_analytics_frontend/: Dockerfile  README.md  cloudbuild.yaml  pyproject.toml
adk_agents_frontend/ecom_analytics_frontend/src/: main.py
adk_agents_frontend/ecom_analytics_frontend/src/static/: styles.css
adk_agents_frontend/ecom_analytics_frontend/src/templates/: base.html  index.html
analytics_hub_data_clean_room/: data_gen.py  example_sql.sql
bigquery-mcp/: README.md
bigquery-mcp/bigquery-data-insight-builder/: .gitignore  Makefile  README.md  app.yaml  index.yaml  pyproject.toml  run_debug.sh
bigquery-mcp/bigquery-data-insight-builder/app/: __init__.py  config.py  main.py  models.py
bigquery-mcp/bigquery-data-insight-builder/app/routes/: api.py  pages.py
bigquery-mcp/bigquery-data-insight-builder/app/templates/: base.html  category.html  editor.html  home.html  tester.html
bigquery-mcp/bigquery-data-insight-builder/static/css/: styles.css
bq-remote-function-agent/: README.md  bq_import_data.py
claude-code-gateway-on-cloudrun/: .claude-version  .gitignore  Dockerfile  README.md  gateway.yaml.example
cloudrun-agent-sandbox/: .gitignore  README.md  agents-cli-manifest.yaml  deploy.sh  pyproject.toml  skills-lock.json
cloudrun-agent-sandbox/tools/session-viewer/: README.md  app.py  pyproject.toml
colab_enterprise_no_internet_setup/: README.md  colab_enterprise_install_pip_no_internet.ipynb
continuous_queries_llm_customer_feedback/: README.md  continuous-queries-data-gen.ipynb  genai_feedback_categoriser.ipynb
conv_analytics_api/: LICENSE  bq_complex_data_analysis.ipynb  conversation_analytics_api_examples.ipynb  pyproject.toml
conv_analytics_api/utils/: create_data_agent_ecommerce_analytics.py  data_agent_helpers.py
conversational-analytics-api/: bq_complex_data_generator.ipynb
dataplex_yaml/: .gitignore  .terraform.lock.hcl  README.md  fake_data_gen.py  main.tf  pyproject.toml  variables.tf
dataplex_yaml/example_insights/: gemini_assisted_error_check.sql
dataplex_yaml/modules/yaml_to_dataplex_dq/: dataplex.tf  main.tf  outputs.tf  rules_file_parsing.tf  variables.tf  versions.tf
dataplex_yaml/rules/dataplex_dq_demo/: customer_with_issues.yaml  validate__customer_with_issues.yaml
dataplex_yaml/tools/: retrieve_yaml.py
dataplex_yaml/tools/data_gen/: fake_data_gen_issues.py  fake_data_gen_no_issues.py
dlt_examples/: README.md  github_pipeline.py  pyproject.toml  slack_pipeline.py
history_based_optimisation/: README.md  estimate_impact_sql_from_google.sql  history_until_date_before_and_after.sql  single_day_before_and_after.sql  test_query_all_until_date.sql  test_query_single_day.sql
local-recipe-planner/: README.md  agents-cli-manifest.yaml  pyproject.toml
mask-banana/: Makefile  README.md  app.js  index.html  main.py  requirements.txt
mcp-toolbox-4-databases/toolbox-admin/: .env.example  README.md  pyproject.toml
mcp-toolbox-4-databases/toolbox-admin/admin_ui/: BUILD.md  Dockerfile  __init__.py  app.py
mcp-toolbox-4-databases/toolbox-admin/admin_ui/templates/: base.html  category.html  edit_query.html  index.html
mcp-toolbox-4-databases/toolbox-admin/admin_ui/utils/: __init__.py  yaml_generator.py
mcp-toolbox-4-databases/toolbox-admin/config/: sample_queries.sql  schema.sql
mcp-toolbox-4-databases/toolbox-admin/docs/: DEPLOYMENT.md
mcp-toolbox-4-databases/toolbox-admin/scripts/: build_admin_ui.sh  build_toolbox.sh  deploy.sh
mcp-toolbox-4-databases/toolbox-admin/terraform/: README.md  main.tf  outputs.tf  terraform.tfvars.example  variables.tf
ollama-cloud-run/: Dockerfile  README.md  send_requests.py
pubsub_producer_flowcontrol/: README.md  pubsub_block_producer.ipynb
pubsub_replay/: .gitignore  .terraform.lock.hcl  README.md  main.tf
tgi-cloud-run/: README.md  pyproject.toml
vertex-ai-virtual-try-on/: README.md  virtrual_try_on_examples.ipynb
vllm-cloud-run/: Dockerfile  README.md  cloudbuild.yaml  de_prompt_gen.py  send_requests.py
(+314 files in other folders)
