[project]
name = "adk_ecommerce_analytics_agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11.11"
dependencies = [
    "google-adk>=1.14.0",
    "google-cloud-geminidataanalytics>=0.3.0",
    "google-generativeai>=0.8.5",
    "pandas>=2.3.2",
]
