[project]
name = "dataplex-yaml"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11.11"
dependencies = [
    "db-dtypes>=1.4.3",
    "faker>=37.1.0",
    "google-cloud-bigquery>=3.31.0",
    "google-cloud-dataplex>=2.10.1",
    "pandas>=2.2.3",
    "pyarrow>=20.0.0",
    "pyyaml>=6.0.2",
]
