[build-system]
requires = ["setuptools"] # Minimal requirement for this example
build-backend = "setuptools.build_meta"

[project]
name = "ecom-analytics-frontend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11.11"
dependencies = [
    "fastapi",
    "uvicorn",
    "jinja2",
    "python-multipart>=0.0.20",
    "google-cloud-aiplatform>=1.117.0",
]

